welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (a>=13) {
    ^hasTeen:7: error: type mismatch;
 found   : Unit
 required: Boolean
    if (b>=13) {
    ^hasTeen:11: error: type mismatch;
 found   : Unit
 required: Boolean
    if (c>=13) {
    ^